<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TS-SEIZURE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="welcome">WELCOME</string>
    <string name="version">Version-2.0.0</string>
    <string name="images">Encrochment Information</string>
    <string name="star">*</string>
    <string name="Aadhaar_hint">Enter Aadhaar Number</string>
    <string name="Tin_hint">Enter Tin Number</string>
    <string name="header_txt">SEIZURE</string>
    <string name="remember_details">Remember Details</string>

    <!-- IP SETTINGS -->
    <string name="ip_settings_header">IP Settings</string>
    <string name="service_url">Service URL</string>
    <string name="ftp_url">FTP URL</string>
    <string name="live">LIVE</string>
    <string name="test">TEST</string>
    <string name="enter_pid">Enter PID</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>

    <color name="bg">#c6d8f7</color>
    <!-- <color name="bg">#58D3F7</color> -->
    <color name="header_bg">#81BEF7</color>
    <color name="orange_color">#FFBF00</color>
    <color name="dd_btn_blue_color">#58ACFA</color>
    <color name="navi_color">#001b50</color>
    <color name="footer_txt_color">#374175</color>
    <color name="dialog_title">#fb0000</color>
    <color name="black">#000000</color>

    <!-- DUPLICATE PRINT -->
    <string name="dup_print">Duplicate Print</string>
    <string name="duplicate_date" textcolor="#ffffff">Select Date</string>
    <string name="get">Get</string>
    <string name="print">Print</string>
    <string name="back_btn">Back</string>
    <string name="cancel_btn">Cancel</string>
    <string name="dup_drunk_drive">Drunk &amp; Drive</string>
    <string name="dup_spot_challan">Spot Challan</string>
    <string name="dup_vhcle_hstry">Vehicle History</string>
    <string name="select_report_type">Select Report Type</string>

    <!-- PREVIOUS HISTORY -->

    <string name="previous_history">Previous History</string>

    <color name="text_color">#195C2A</color>

    <!-- 23dbbd green button style -->

    <color name="tranparent_color">#80ffffff</color>
    <color name="tranparent_color_black">#80000000</color>
    <color name="transparent">#00000000</color>
    <color name="green">#568e3a</color>

    <string name="vehicle_history">Vehicle History</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="footer_txt">Invented And Developed By \nMother Technologies Project Ventures</string>
    <string name="title_activity_shop_vendor">Shop_vendor</string>
    <string name="title_activity_foot_path__vendor">FootPath_Vendor</string>
    <string name="title_activity_ipsettings">IPsettings</string>
    <string name="title_activity_duplicate_print">DuplicatePrint</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_foot_path__preview">FootPath_Preview</string>
    <string name="title_activity_release_document">ReleaseDocument</string>
    <string name="title_activity_release_documents_print">ReleaseDocumentsPrint</string>
    <string name="title_activity_capture_images">CaptureImages</string>
    <string name="title_activity_previous_history">MainActivity</string>
    <string name="title_activity_ph_print_display">Ph_printDisplayActivity</string>

</resources>
