<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/AbsoluteLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bgcolor"
	android:orientation="vertical"
	android:scrollbarAlwaysDrawVerticalTrack="true"
	android:scrollbars="horizontal">

	<RelativeLayout
		android:id="@+id/relativeLayout1"
		style="@style/header_style"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/imageView1"
			style="@style/header_images_style_left"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:contentDescription="@null"
			android:visibility="invisible" />

		<ImageView
			android:id="@+id/imageView2"
			style="@style/header_images_style_right"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:contentDescription="@null"
			android:visibility="gone" />


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView1"
				style="@style/header_text_style"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/header_txt" />

			<TextView
				android:id="@+id/title_tv"
				style="@style/cust_text_style"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/version"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:visibility="visible"/>

		</LinearLayout>


	</RelativeLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_x="0dp"
		android:layout_y="120dp"
		android:scrollbarAlwaysDrawVerticalTrack="true"
		android:scrollbars="vertical">

		<LinearLayout
			android:id="@+id/violation_linerlayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="0dp"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/imgvd"
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_gravity="center"
				android:layout_x="150dp"
				android:layout_y="111dp"
				android:src="@drawable/logo" />

			<TextView
				android:id="@+id/loginText"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_gravity="center"
				android:layout_x="225dp"
				android:layout_y="408dp"
				android:gravity="center_horizontal"
				android:hint="30dp"
				android:text="@string/login"
				android:textColor="@color/navi_color"
				android:textSize="30dp"
				android:textStyle="bold" />

			<requestFocus />

			<EditText
				android:id="@+id/userID_ET"
				style="@style/edt_custom_style"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_marginTop="10dp"
				android:layout_x="20dp"
				android:layout_y="460dp"
				android:ems="10"
				android:gravity="center_horizontal|center"
				android:hint="@string/enter_pid"
				android:inputType="number"
				android:text=""
				android:textColor="#191970"
				android:textSize="26sp" />

			<EditText
				android:id="@+id/password_ET"
				style="@style/edt_custom_style"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_marginTop="15dp"
				android:layout_x="20dp"
				android:layout_y="530dp"
				android:ems="10"
				android:gravity="center_horizontal|center"
				android:hint="@string/enter_pwd"
				android:inputType="textPassword"
				android:text=""
				android:textColor="#191970"
				android:textSize="26sp" />

			<LinearLayout
				android:id="@+id/h120"
				android:layout_width="match_parent"
				android:layout_height="70dp"
				android:layout_margin="15dp"
				android:orientation="horizontal"
				android:weightSum="2">

				<Button
					android:id="@+id/cancel_Btn"
					style="@style/naviblue_custom_style"
					android:layout_width="0dp"
					android:layout_height="65dp"
					android:text="Cancel"
					android:textColor="#ffffff"
					android:textSize="22sp"
					android:textStyle="bold"
					android:layout_weight="1"/>


				<!--android:background="@drawable/buttonstyle"  -->

				<Button
					android:id="@+id/login_Btn"
					style="@style/naviblue_custom_style"
					android:layout_width="0dp"
					android:layout_height="65dp"
					android:layout_x="320dp"
					android:layout_y="620dp"
					android:text="Login"
					android:textColor="#ffffff"
					android:textSize="22sp"
					android:textStyle="bold"
					android:layout_weight="1"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ip_settings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="right"
				android:orientation="vertical">

				<ImageView
					android:id="@+id/img_ip_settings"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_marginRight="20dp"
					android:src="@drawable/setings" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="20dp"
					android:layout_marginTop="5dp"
					android:text="IP Settings"
					android:textColor="@color/navi_color"
					android:textSize="20sp"
					android:textStyle="bold" />

			</LinearLayout>


		</LinearLayout>

	</ScrollView>


</AbsoluteLayout>
